Fixed sizing on smaller screen sizes
Fixed size of the image on movie-card and the amount of movie cards in each column

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,9 @@ $body-bg: lemonchiffon;
 .movie-card {
   text-decoration: none;
 }
+
+@media screen and (max-width: 1200px) {
+  .card-img {
+    height: 60%;
+  }
+}
